deploy: lingsamuel/GreyLibraryPosts@92afe09c49ad334c8c14f6afd91d85762e2c6a40

--- a/css/main.css
+++ b/css/main.css
@@ -1170,4 +1170,9 @@ fieldset[disabled] input[type="checkbox"] {
 .post-foot-meta-box .post-read-more {
   margin-left:auto;
   margin-right:0;
+  min-width: fit-content;
+}
+
+.blog-tags {
+  margin-top: 0px;
 }
