deploy: lingsamuel/GreyLibraryPosts@2109325b824a77aee30364a58a328b6cef21273d

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ p {
 }
 
 p + p {
-  margin: 12px 0 6px 0;
+  margin: 6px 0 6px 0;
 }
 
 p a {
@@ -1300,4 +1300,8 @@ p.figcaption-center {
 
 .blog-post > p {
   text-indent: 2em;
+}
+
+ul {
+  padding-inline-start: 2em;
 }
