deploy: lingsamuel/GreyLibraryPosts@89c7fd8f10a1d8de100f4e29985c832323d20161

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,14 @@ p + p {
   margin: 6px 0 6px 0;
 }
 
+ul + p {
+  margin: 12px 0 6px 0;
+}
+
+p + ul {
+  margin: 12px 0 10px 0;
+}
+
 p a {
   /* text-decoration: underline */
   color: #008AFF;
